<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="30dp"
        android:orientation="vertical">

        <!-- Navigation start-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                style="@style/navigationButton"
                android:text="@string/categoryWeight"
                android:textColor="@color/colorOrangeSpecific" />

            <Button
                style="@style/navigationButton"
                android:layout_marginHorizontal="10dp"
                android:text="@string/categoryDistance" />

            <Button
                style="@style/navigationButton"
                android:text="@string/categoryCurrency" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>
        <!-- Navigation end-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout style="@style/unitRow">

                <FrameLayout style="@style/unitFrame">

                    <TextView
                        android:id="@+id/unit1"
                        style="@style/unitFrameTextBlock"
                        android:text="@string/gram" />

                </FrameLayout>

                <EditText
                    android:id="@+id/inputField1"
                    style="@style/editTextCustom"
                    tools:ignore="LabelFor" />

            </LinearLayout>

            <LinearLayout style="@style/unitRow">

                <FrameLayout style="@style/unitFrame">

                    <TextView
                        android:id="@+id/unit2"
                        style="@style/unitFrameTextBlock"
                        android:text="@string/kilogram" />

                </FrameLayout>

                <EditText
                    android:id="@+id/inputField2"
                    style="@style/editTextCustom"
                    tools:ignore="LabelFor" />

            </LinearLayout>

            <LinearLayout style="@style/unitRow">

                <FrameLayout style="@style/unitFrame">

                    <TextView
                        android:id="@+id/unit3"
                        style="@style/unitFrameTextBlock"
                        android:text="@string/ton" />

                </FrameLayout>

                <EditText
                    android:id="@+id/inputField3"
                    style="@style/editTextCustom"
                    tools:ignore="LabelFor" />

            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="bottom">

            <TableRow style="@style/keyboardRow">

                <Button
                    android:id="@+id/kbEraseAll"
                    style="@style/keyboardButtonExtended"
                    android:text="@string/eraseAll" />

                <Button
                    android:id="@+id/kbEraseLast"
                    style="@style/keyboardButtonExtended"
                    android:text="@string/eraseLast" />

                <Button
                    android:id="@+id/kbPer"
                    style="@style/keyboardButtonExtended"
                    android:text="@string/opPer" />

                <Button
                    android:id="@+id/kbDiv"
                    style="@style/keyboardButtonExtended"
                    android:text="@string/opDiv" />

            </TableRow>

            <TableRow style="@style/keyboardRow">

                <Button
                    android:id="@+id/kbNum7"
                    style="@style/keyboardButton"
                    android:onClick="kbNumButtonClick"
                    android:text="@string/num7" />

                <Button
                    android:id="@+id/kbNum8"
                    style="@style/keyboardButton"
                    android:onClick="kbNumButtonClick"
                    android:text="@string/num8" />

                <Button
                    android:id="@+id/kbNum9"
                    style="@style/keyboardButton"
                    android:onClick="kbNumButtonClick"
                    android:text="@string/num9" />

                <Button
                    android:id="@+id/kbMul"
                    style="@style/keyboardButtonExtended"
                    android:text="@string/opMul" />

            </TableRow>

            <TableRow style="@style/keyboardRow">

                <Button
                    android:id="@+id/kbNum4"
                    style="@style/keyboardButton"
                    android:onClick="kbNumButtonClick"
                    android:text="@string/num4" />

                <Button
                    android:id="@+id/kbNum5"
                    style="@style/keyboardButton"
                    android:onClick="kbNumButtonClick"
                    android:text="@string/num5" />

                <Button
                    android:id="@+id/kbNum6"
                    style="@style/keyboardButton"
                    android:onClick="kbNumButtonClick"
                    android:text="@string/num6" />

                <Button
                    android:id="@+id/kbSub"
                    style="@style/keyboardButtonExtended"
                    android:text="@string/opSub" />

            </TableRow>

            <TableRow style="@style/keyboardRow">

                <Button
                    android:id="@+id/kbNum1"
                    style="@style/keyboardButton"
                    android:onClick="kbNumButtonClick"
                    android:text="@string/num1" />

                <Button
                    android:id="@+id/kbNum2"
                    style="@style/keyboardButton"
                    android:onClick="kbNumButtonClick"
                    android:text="@string/num2" />

                <Button
                    android:id="@+id/kbNum3"
                    style="@style/keyboardButton"
                    android:onClick="kbNumButtonClick"
                    android:text="@string/num3" />

                <Button
                    android:id="@+id/kbAdd"
                    style="@style/keyboardButtonExtended"
                    android:text="@string/opAdd" />

            </TableRow>

            <TableRow style="@style/keyboardRow">

                <Button
                    android:id="@+id/kbMode"
                    style="@style/keyboardButtonExtended"
                    android:text="@string/mode" />

                <Button
                    android:id="@+id/kbNum0"
                    style="@style/keyboardButton"
                    android:onClick="kbNumButtonClick"
                    android:text="@string/num0" />

                <Button
                    android:id="@+id/kbDot"
                    style="@style/keyboardButton"
                    android:text="@string/dot" />

                <Button
                    android:id="@+id/kbEqu"
                    style="@style/keyboardButtonExtended"
                    android:text="@string/opEqu" />

            </TableRow>

        </TableLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>