<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout style="@style/unitRow">

        <FrameLayout
            android:id="@+id/unitRow0"
            style="@style/unitFrame">

            <TextView
                android:id="@+id/unit0"
                style="@style/unitFrameTextBlock"
                android:text="@string/millimeter" />

        </FrameLayout>

        <EditText
            android:id="@+id/inputField0"
            style="@style/editTextCustom"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/unitRow1"
        style="@style/unitRow">

        <FrameLayout style="@style/unitFrame">

            <TextView
                android:id="@+id/unit1"
                style="@style/unitFrameTextBlock"
                android:text="@string/meter" />

        </FrameLayout>

        <EditText
            android:id="@+id/inputField1"
            style="@style/editTextCustom"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/unitRow2"
        style="@style/unitRow">

        <FrameLayout style="@style/unitFrame">

            <TextView
                android:id="@+id/unit2"
                style="@style/unitFrameTextBlock"
                android:text="@string/mile" />

        </FrameLayout>

        <EditText
            android:id="@+id/inputField2"
            style="@style/editTextCustom"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>

